<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/btmnavbar_navmain"
            app:startDestination="@id/homeFragment">

    <fragment
            android:id="@+id/tvListFragment"
            android:name="com.finproj.movieapp.fragments.TvListFragment"
            android:label="@string/tv_list_frag"
            tools:layout="@layout/fragment_tv_list" />
    <fragment
            android:id="@+id/homeFragment"
            android:name="com.finproj.movieapp.fragments.HomeFragment"
            android:label="@string/home_frag"
            tools:layout="@layout/fragment_home" />
    <fragment
            android:id="@+id/movieListFragment"
            android:name="com.finproj.movieapp.fragments.MovieListFragment"
            android:label="@string/movie_list_frag"
            tools:layout="@layout/fragment_movie_list" />
</navigation>