<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.UserFavoriteActivity">

    <Button
            android:text="@string/back_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_back"
            app:layout_constraintTop_toBottomOf="@+id/fav_movie_button"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fav_tvshow_button"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fav_movie_button"
            android:background="@drawable/home_text_border"
            android:layout_width="350dp"
            android:layout_height="250dp" app:layout_constraintBottom_toTopOf="@+id/button_back"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <ImageView
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_width="340dp"
                android:layout_height="180dp"
                app:srcCompat="@drawable/cinema_png"
                android:id="@+id/movie_image" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.042" android:contentDescription="@string/cinema_image"/>
        <TextView
                android:text="@string/movie"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fav_tvshow_button"
            android:background="@drawable/home_text_border"
            android:layout_width="350dp"
            android:layout_height="250dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_back" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <ImageView
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="197dp"
                app:srcCompat="@drawable/tvshow_png"
                android:id="@+id/tvshow_image" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.042" android:contentDescription="@string/tv_image"/>
        <TextView
                android:text="@string/tv_show"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvshow_image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>