<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".showsdetails.MovieDetailsActivity"
        android:id="@+id/swiperefreshlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:id="@+id/page_scroller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/top_details"
                    android:background="@drawable/top_item_detail_border"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                <ImageView
                        android:layout_width="130dp"
                        android:layout_height="195dp" app:srcCompat="@drawable/ic_launcher_background"
                        android:id="@+id/movie_image" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                        android:layout_marginStart="15dp" android:contentDescription="@string/item_image_text"/>
                <TextView
                        android:text="@string/movie_original_title"
                        android:textSize="23sp"
                        android:gravity="center_vertical"
                        android:layout_width="167dp"
                        android:layout_height="wrap_content" android:id="@+id/movie_og_title"
                        android:layout_marginStart="20dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/movie_image" android:layout_marginTop="13dp"
                        app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toTopOf="@+id/movie_title"
                        app:layout_constraintVertical_bias="1.0"/>
                <TextView
                        android:text="@string/movie_title"
                        android:textSize="17sp"
                        android:gravity="center_vertical"
                        android:layout_width="167dp"
                        android:layout_height="wrap_content" android:id="@+id/movie_title"
                        android:layout_marginStart="20dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/movie_image" android:layout_marginTop="13dp"
                        app:layout_constraintHorizontal_bias="0.125" app:layout_constraintBottom_toTopOf="@+id/movie_details"
                        app:layout_constraintVertical_bias="0.54"/>
                <TextView
                        android:text="@string/movie_details"
                        android:textSize="16sp"
                        android:layout_width="320dp"
                        android:paddingBottom="14dp"
                        android:layout_height="wrap_content" android:id="@+id/movie_details"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movie_image"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.5"
            />

            <TextView
                    android:text="@string/movie_overview"
                    android:textSize="17sp"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:id="@+id/movie_overview"
                    app:layout_constraintTop_toBottomOf="@+id/top_details"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/button_add_favorite" />

            <Button
                    android:text="@string/add_favorite_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_add_favorite"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="28dp"
                    app:layout_constraintHorizontal_bias="0.791"/>
            <Button
                    android:text="@string/back_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_back"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="28dp"
                    app:layout_constraintHorizontal_bias="0.154"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>