<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">


    <ImageView
            android:background="@drawable/tmdb_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/loginAppTitle"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/tmdb_logo_text"/>
    <TextView
            android:id="@+id/loginAppTitle"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textColor="@color/text_color_dark"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/login_button"
            android:layout_marginBottom="25dp"/>
    <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/exit_button" android:layout_marginBottom="20dp"/>
    <Button
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/text_color_dark"
            android:text="@string/exit_button_text" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="100dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>